# kitti_pointcloud_tools

./: .gitignore  CMakeLists.txt  README.md
.serena/: project.yml
cmake/: CompilerWarnings.cmake
data/: 000123.pcd
docs/superpowers/plans/: 2026-07-23-kpt-refactor.md
docs/superpowers/specs/: 2026-07-23-refactor-design.md
src/: binary_to_images.cc  cloud2images.cpp  cloud2images.hpp  cloud2images_soft.cc  cloud2images_soft.hpp  convert_pcd_to_binary.cc  kitti_binary.cc  kitti_binary.h  kitti_binary_converter.cc  kitti_player.cc  kitti_player_two.cc  kitti_player_with_poses.cpp  pcd_to_images.cpp  pcd_to_images_soft.cpp  se_helper.cpp  se_helper.h  types.h
src/cli/: pc_batch_convert.cc  pc_convert.cc  pc_player.cc  pc_render.cc  pc_viewer.cc
src/gui/: app.cpp  app.hpp  job_system.cpp  job_system.hpp  pc_gui.cc  point_renderer.cpp  point_renderer.hpp
src/kpt/: types.hpp
src/kpt/io/: format.hpp  io.cpp  io.hpp
src/kpt/label/: label.cpp  label.hpp
src/kpt/player/: player.cpp  player.hpp
src/kpt/render/: render.cpp  render.hpp
src/kpt/viewer/: viewer.cpp  viewer.hpp
src/kpt/workflow/: workflow.cpp  workflow.hpp
test/data/: tiny.label  tiny.xyzi  tiny.xyzrgb  tiny.xyzrgbi  tiny_bad.xyz
tests/: gui_test.cpp  io_test.cpp  label_test.cpp  render_test.cpp  workflow_test.cpp
